src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>BigMachines__Part_Number__c</fullName>
        <externalId>true</externalId>
        <label>BigMachines Part Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FourthShift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pivotal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BigMachines</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>All Products</label>
    </listViews>
</CustomObject>